--- a/src/app/components/fornecedor-cadastro/fornecedor-cadastro.component.html
+++ b/src/app/components/fornecedor-cadastro/fornecedor-cadastro.component.html
@@ -1,27 +1,102 @@
-<h2>Cadastro de Fornecedores</h2>
-<div class="form-cadastro">
-  <label>Nome:</label>
-  <input type="text" pInputText [(ngModel)]="fornecedor.nome" />
+<div class="card">
+  <h2>Cadastro de Fornecedores</h2>
 
-  <label>Email:</label>
-  <input type="email" pInputText [(ngModel)]="fornecedor.email" />
+  <div class="grid p-fluid">
+    <div class="col-12 md:col-6">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-user"></i>
+        </span>
+        <input
+          pInputText
+          [(ngModel)]="fornecedor.nome"
+          placeholder="Nome"
+          class="p-inputtext-lg"
+        />
+      </div>
+    </div>
 
-  <label>Telefone:</label>
-  <input type="text" pInputText [(ngModel)]="fornecedor.telefone" />
+    <div class="col-12 md:col-6">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-envelope"></i>
+        </span>
+        <input
+          type="email"
+          pInputText
+          [(ngModel)]="fornecedor.email"
+          placeholder="Email"
+          class="p-inputtext-lg"
+        />
+      </div>
+    </div>
 
-  <label>Endereço:</label>
-  <input type="text" pInputText [(ngModel)]="fornecedor.endereco" />
+    <div class="col-12 md:col-6">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-envelope"></i>
+        </span>
+        <input
+          type="password"
+          pInputText
+          [(ngModel)]="fornecedor.senha"
+          placeholder="Senha"
+          class="p-inputtext-lg"
+        />
+      </div>
+    </div>
 
-  <p-button
-    label="Salvar"
-    icon="pi pi-save"
-    (click)="salvarFornecedor()"
-    class="p-button-success"
-  ></p-button>
-  <p-button
-    label="Voltar"
-    icon="pi pi-arrow-left"
-    routerLink="/fornecedores"
-    class="p-button-secondary"
-  ></p-button>
+    <div class="col-12 md:col-6">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-phone"></i>
+        </span>
+        <input
+          pInputText
+          [(ngModel)]="fornecedor.telefone"
+          placeholder="Telefone"
+          class="p-inputtext-lg"
+        />
+      </div>
+    </div>
+
+    <div class="col-12 md:col-6">
+      <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+          <i class="pi pi-map-marker"></i>
+        </span>
+        <input
+          pInputText
+          [(ngModel)]="fornecedor.endereco"
+          placeholder="Endereço"
+          class="p-inputtext-lg"
+        />
+      </div>
+    </div>
+  </div>
+
+  <div class="flex justify-content-end gap-2 mt-4">
+    <p-button
+      label="Já sou cadastrado"
+      icon="pi pi-sign-in"
+      styleClass="p-button-info"
+      (onClick)="irParaLogin()"
+    ></p-button>
+
+    <p-button
+      label="Voltar"
+      icon="pi pi-arrow-left"
+      styleClass="p-button-secondary"
+      routerLink="/fornecedores"
+    ></p-button>
+
+    <p-button
+      label="Salvar"
+      icon="pi pi-save"
+      styleClass="p-button-success"
+      (onClick)="salvarFornecedor()"
+    ></p-button>
+  </div>
 </div>
+
+<p-toast></p-toast>
