--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,16 +1,9 @@
-/* fornecedor-cadastro.component.scss */
+/* login.component.scss */
 :host {
   .card {
+    max-width: 400px;
+    margin: 2rem auto;
     padding: 2rem;
-    border-radius: 10px;
-    background: var(--surface-card);
-    box-shadow: var(--card-shadow);
-    margin: 2rem;
-  }
-
-  h2 {
-    margin-bottom: 2rem;
-    color: var(--primary-color);
   }
 
   .p-inputgroup {
@@ -21,5 +14,13 @@
     background: var(--primary-color);
     color: var(--primary-color-text);
     border-color: var(--primary-color);
+  }
+
+  a {
+    color: var(--primary-color);
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
