--- a/src/app/components/fornecedor-cadastro/fornecedor-cadastro.component.html
+++ b/src/app/components/fornecedor-cadastro/fornecedor-cadastro.component.html
@@ -87,10 +87,9 @@
     <p-button
       label="Voltar"
       icon="pi pi-arrow-left"
-      styleClass="p-button-secondary"
-      routerLink="/fornecedores"
+      routerLink=".."
+      class="p-button-secondary"
     ></p-button>
-
     <p-button
       label="Salvar"
       icon="pi pi-save"
