--- a/src/app/components/fornecedor-edicao/fornecedor-edicao.component.html
+++ b/src/app/components/fornecedor-edicao/fornecedor-edicao.component.html
@@ -93,7 +93,7 @@
       label="Voltar"
       icon="pi pi-arrow-left"
       styleClass="p-button-secondary"
-      [routerLink]="['/', fornecedor.id]"
+      [routerLink]="['..', fornecedor.id]"
     ></p-button>
   </div>
 </div>
