--- a/src/app/components/atualizacao-quantidade/atualizacao-quantidade.component.html
+++ b/src/app/components/atualizacao-quantidade/atualizacao-quantidade.component.html
@@ -26,7 +26,7 @@
   <p-button
     label="Voltar"
     icon="pi pi-arrow-left"
-    routerLink="/relatorios-inventario"
+    [routerLink]="[fornecedorId, '/relatorios-inventario']"
     class="p-button-secondary"
   ></p-button>
 </div>
