--- a/src/app/components/relatorios-inventario/relatorios-inventario.component.html
+++ b/src/app/components/relatorios-inventario/relatorios-inventario.component.html
@@ -2,7 +2,7 @@
 <p-button
   label="Voltar"
   icon="pi pi-arrow-left"
-  routerLink="/"
+  routerLink=".."
   class="p-button-secondary"
 ></p-button>
 <br /><br />
